--- a/Simple Battery Optimization.ipynb
+++ b/Simple Battery Optimization.ipynb
@@ -84,7 +84,8 @@
    ],
    "source": [
     "import getpass\n",
-    "PathProj = \"C://Users//{usr}//GoogleDrive//Projects//Battery Optimization\".format(usr=getpass.getuser())\n",
+    "# Add the project path here (where batopt.py and the Input folder is located)\n",
+    "PathProj = \"C://\"\n",
     "getpass.sys.path.append(PathProj)\n",
     "\n",
     "# My modules\n",
