--- a/Tesla Power Pack valuation in CAISO.ipynb
+++ b/Tesla Power Pack valuation in CAISO.ipynb
@@ -92,7 +92,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3><i><font color=#BA4A00>1) Initialize battery</font></i></h3>"
+    "<h3><i><font color=#BA4A00>1) Initialize battery</font></i></h3>\n",
+    "To define your own battery, simply define a new column in BatteryDefns, and set the model parameter to that column name."
    ]
   },
   {
@@ -118,6 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loads the CAISO 2018 prices for a randomly-selected node.\n",
     "Prices_CAISO = pd.read_pickle(\"{}//Input//CAISO_prices_2018.pkl\".format(PathProj))"
    ]
   },
@@ -141,6 +143,7 @@
     }
    ],
    "source": [
+    "# To set prices, pass the price iterable as the first argument, and indicate the starting time and the market time implementation.\n",
     "battery.set_prices(Prices_CAISO['USD/kWh'], start_time=(\"01/01/2018\", 1), market_time=CA_time)"
    ]
   },
@@ -572,9 +575,9 @@
    "metadata": {},
    "source": [
     "<h3><i><font color=#BA4A00>Simple Payback Period with AS Revenue</font></i></h3>\n",
-    "Calculate the payback period with a given interest rate. Let the battery have (fixed) revenue from energy arbitrage and ancillary services, and energy costs.\n",
+    "Calculate the payback period (i.e. number of years until your project has a positive worth) while considering the cost of capital. Let the battery have (fixed) revenue from energy arbitrage and ancillary services, and energy costs.\n",
     "\n",
-    "<br><b>References</b><br>\n",
+    "<b>References</b><br>\n",
     "<a href=\"https://electrek.co/2019/02/18/tesla-big-battery-pay-for-itself/\">Tesla’s 100MW/129MWh Powerpack project in South Australia</a> <br>\n",
     "<a href=\"https://cleantechnica.com/2018/06/09/100-kwh-tesla-battery-cells-this-year-100-kwh-tesla-battery-packs-in-2020/\">100USD/kWh Tesla Cells</a>"
    ]
