--- a/markettime protocol.ipynb
+++ b/markettime protocol.ipynb
@@ -90,7 +90,7 @@
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
       "\u001b[1;32m<ipython-input-5-112330b624b2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# CAISO time is a 1-24(+25)-hour scale\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mCAISO\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTimeStamp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdt1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mC://Users//Dave//GoogleDrive//Projects//Battery Optimization\\markettime.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, dt, hr)\u001b[0m\n\u001b[0;32m     37\u001b[0m                                 \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Market hr must be an integer from 1-25.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m                         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;36m1\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[0mhr\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[1;36m25\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 39\u001b[1;33m                                 \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Market hr must be an integer from 1-25.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     40\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m                         \u001b[1;31m# date object\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC://Users//Dave//GoogleDrive//Projects//Battery Optimization\\markettime.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, dt, hr)\u001b[0m\n\u001b[0;32m     91\u001b[0m                                 \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Market hr must be an integer from 1-25.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     92\u001b[0m                         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;36m1\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[0mhr\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[1;36m25\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 93\u001b[1;33m                                 \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Market hr must be an integer from 1-25.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     94\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     95\u001b[0m                         \u001b[1;31m# date object\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mValueError\u001b[0m: Market hr must be an integer from 1-25."
      ]
     }
@@ -121,6 +121,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "07/01/2019 H01"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# if 'first' is passed as param hr, then the first hour of that day is returned\n",
+    "CAISO.TimeStamp(dt1, 'first')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -131,20 +152,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2018, 2, 25, 12, 0)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dt2 = datetime.datetime(year=2018, month=2, day=25, hour=12)\n",
     "dt2"
@@ -152,20 +162,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "02/25/2018 H05"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dt2_mt = CA_time.GMT_toMarket(dt2)\n",
     "dt2_mt"
@@ -173,28 +172,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2018, 3, 11, 10, 0)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "03/11/2018 H04"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dt=CA_time.DST_periods[2018][0]\n",
     "display(dt, CA_time.GMT_toMarket(dt))"
@@ -210,20 +190,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2018, 2, 25, 12, 0)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "CA_time.Market_toGMT(dt2_mt)"
    ]
@@ -238,20 +207,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.timedelta(0, 3600)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "CA_time.delta_t"
    ]
@@ -266,31 +224,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{1: (01/01/2000 H01, 01/31/2000 H24),\n",
-       " 2: (02/01/2000 H01, 02/29/2000 H24),\n",
-       " 3: (03/01/2000 H01, 03/31/2000 H24),\n",
-       " 4: (04/01/2000 H01, 04/30/2000 H24),\n",
-       " 5: (05/01/2000 H01, 05/31/2000 H24),\n",
-       " 6: (06/01/2000 H01, 06/30/2000 H24),\n",
-       " 7: (07/01/2000 H01, 07/31/2000 H24),\n",
-       " 8: (08/01/2000 H01, 08/31/2000 H24),\n",
-       " 9: (09/01/2000 H01, 09/30/2000 H24),\n",
-       " 10: (10/01/2000 H01, 10/31/2000 H24),\n",
-       " 11: (11/01/2000 H01, 11/30/2000 H24),\n",
-       " 12: (12/01/2000 H01, 12/31/2000 H24)}"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Class methods can also be invoked by an instance\n",
     "CA_time.get_month_ends(2000)"
@@ -306,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +251,7 @@
        "CAISO market time at GMT-8. DST observed in: 2018, 2019"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,16 +263,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "04/02/2019 H10"
+       "04/26/2019 H08"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,76 +280,6 @@
    "source": [
     "# Test 2019 DST\n",
     "CA_time.GMT_toMarket(datetime.datetime.now())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{1: (01/01/2000 H01, 01/31/2000 H24),\n",
-       " 2: (02/01/2000 H01, 02/29/2000 H24),\n",
-       " 3: (03/01/2000 H01, 03/31/2000 H24),\n",
-       " 4: (04/01/2000 H01, 04/30/2000 H24),\n",
-       " 5: (05/01/2000 H01, 05/31/2000 H24),\n",
-       " 6: (06/01/2000 H01, 06/30/2000 H24),\n",
-       " 7: (07/01/2000 H01, 07/31/2000 H24),\n",
-       " 8: (08/01/2000 H01, 08/31/2000 H24),\n",
-       " 9: (09/01/2000 H01, 09/30/2000 H24),\n",
-       " 10: (10/01/2000 H01, 10/31/2000 H24),\n",
-       " 11: (11/01/2000 H01, 11/30/2000 H24),\n",
-       " 12: (12/01/2000 H01, 12/31/2000 H24)}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(3):\n",
-    "    if i==1:\n",
-    "        continue\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b"
    ]
   }
  ],
